--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!-- Consider specifying the language of your content by adding the `lang` attribute to <html> -->
 
@@ -13,7 +13,7 @@
          More info: h5bp.com/i/378 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>»OÅK­q²¼¤pÀ°¤â</title>
+    <title>è‡ºéµè¨‚ç¥¨å°å¹«æ‰‹</title>
     <meta name="description" content="">
 
     <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -30,43 +30,43 @@
 
 </head>
 <body>
-<h1>¨®¦¸­q³æµ{²¼</h1> 
+<h1>è»Šæ¬¡è¨‚å–®ç¨‹ç¥¨</h1> 
 <div id="ticketInfo">
 <table border="0" cellpadding="5" cellspacing="5" >
 	<tbody><tr>
-		<td width="100" >¨­¤ÀÃÒ¦r¸¹¡G</td>
+		<td width="100" >èº«åˆ†è­‰å­—è™Ÿï¼š</td>
 		<td width="500"><input type="text" id="person_id"></td>
 	</tr>
 	<tr>
-		<td >°_¯¸¥N½X¡G</td>
+		<td >èµ·ç«™ä»£ç¢¼ï¼š</td>
 		<td><select id="from_city" ></select>
 			<select id="from_station" >
 			</select>
 		</td>
 	</tr>
 	<tr>
-		<td >¨ì¯¸¥N½X¡G</td>
+		<td >åˆ°ç«™ä»£ç¢¼ï¼š</td>
 		<td><select id="to_city" ></select>
 			<select id="to_station" >
 			</select>
 		</td>
 	</tr>
 	<tr>
-		<td >­¼¨®¤é´Á¡G</td>
+		<td >ä¹˜è»Šæ—¥æœŸï¼š</td>
 		<td>
 			<select id="getin_date" ></select>
-			<button id="getTrainInfo">®É¨èªí</button>
+			<button id="getTrainInfo">æ™‚åˆ»è¡¨</button>
 		</td>
 	</tr>
 	<tr>
-		<td >¨®¦¸¥N½X¡G</td>
+		<td >è»Šæ¬¡ä»£ç¢¼ï¼š</td>
 		<td>
 			<input type="text" id="train_no">
 			 <span id="boxDesc" style="display: none;"></span>
 		</td>
 	</tr>
 	<tr>
-		<td >­q²¼±i¼Æ¡G</td>
+		<td >è¨‚ç¥¨å¼µæ•¸ï¼š</td>
 		<td>
 			<div id="boxNorm" style="display: block;">
 					<select id="order_qty_str" >
@@ -91,7 +91,7 @@
 			</div>
 			<div id="boxSpec" style="display: none;">
 				<div id="boxSpecN" style="display:none;">
-					<span>¤@¯ë¨®´[¡G</span>
+					<span>ä¸€èˆ¬è»Šå»‚ï¼š</span>
 					<select id="n_order_qty_str" >
 						<option value="0" selected="">0</option>
 						<option value="1">1</option>
@@ -100,10 +100,10 @@
 						<option value="4">4</option>
 						<option value="5">5</option>
 						<option value="6">6</option>
-					</select> ±i
+					</select> å¼µ
 				</div>
 				<div id="boxSpecD" style="display:none;">
-					<span>°Ó°È¨®´[¡G</span>
+					<span>å•†å‹™è»Šå»‚ï¼š</span>
 					<select id="d_order_qty_str">
 						<option value="0" selected="">0</option>
 						<option value="1">1</option>
@@ -112,10 +112,10 @@
 						<option value="4">4</option>
 						<option value="5">5</option>
 						<option value="6">6</option>
-					</select> ±i
+					</select> å¼µ
 				</div>
 				<div id="boxSpecB" style="display:none;">
-					<span>¨âÅK¨®´[¡G</span>
+					<span>å…©éµè»Šå»‚ï¼š</span>
 					<select id="b_order_qty_str" >
 						<option value="0" selected="">0</option>
 						<option value="1">1</option>
@@ -124,14 +124,14 @@
 						<option value="4">4</option>
 						<option value="5">5</option>
 						<option value="6">6</option>
-					</select> ±i¡]§t <span id="boxB01">0</span> ¤H¤Î <span id="boxB02">0</span> ¨®½ø¡^
+					</select> å¼µï¼ˆå« <span id="boxB01">0</span> äººåŠ <span id="boxB02">0</span> è»Šè¼›ï¼‰
 				</div>
 				<div id="boxSpecZ" style="display:none;">
-					<span>®à«¬®y¦ì¡G</span>
+					<span>æ¡Œåž‹åº§ä½ï¼š</span>
 					<select id="z_order_qty_str">
 						<option value="0" selected="">0</option>
 						<option value="4">4</option>
-					</select> ±i<span id="boxZ"></span>
+					</select> å¼µ<span id="boxZ"></span>
 				</div>
 			</div>
 		</td>
@@ -144,14 +144,14 @@
 		<td>&nbsp;</td>
 		<td>
 			<input id="returnTicket" type="hidden" value="0">
-			<button id="setting_ticket_infoBtn">­q²¼</button><br />
+			<button id="setting_ticket_infoBtn">è¨‚ç¥¨</button><br />
 		</td>
 	</tr>
 </tbody></table>
 </div>
 <div id="systemInfo"><div>
 <div id="checkBlock" class="youCannotSeeMe">
-	ÅçÃÒ½X¿é¤J(ENTER)¡G<input type="text" value="" id="capNum"/><br />
+	é©—è­‰ç¢¼è¼¸å…¥(ENTER)ï¼š<input type="text" value="" id="capNum"/><br />
 	<div id="msg"></div><br />
 	<div id="stepMsg" ></div><br />
 	<img src="" id="capImg"></img><br />
