--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          More info: h5bp.com/i/378 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>臺鐵訂票小幫手</title>
+    <title>台鐵</title>
     <meta name="description" content="">
 
     <!-- Mobile viewport optimized: h5bp.com/viewport -->
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-<h1>車次訂單程票</h1> 
+<h1>哈哈</h1> 
 <div id="ticketInfo">
 <table border="0" cellpadding="5" cellspacing="5" >
 	<tbody><tr>
