中文化 & 第一篇POST

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <p class="date"><span>2013.09.20</span></p>
             <h2><a href="/articles/Hello_World/">Hello World!</a></h2>
           </header>
-          <section class="content"><p>Syntax highlighting with <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>.
-The theme used is tomorrow, you can find more themes <a href="http://jmblog.github.io/color-themes-for-highlightjs/">here</a>.</p>
-<p>
+          <section class="content"><p>中秋連假稍微有點閒就來把一些未完成的項目解決，其中一個就是「Github blog」，
+找了一些 framework 用來產生靜態站似乎又太肥，最後看到這套 <strong>wintersmith</strong>，
+純粹用 nodejs 來產生網站，配合線上看結果再輸出，還不錯!<br>
             <p class="more"><a href="/articles/Hello_World/">(繼續閱讀)</a></p>
           </section>
         </article>
