加個no cache 與 修改第一篇 po 文

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
     <title>隨手筆記
     </title>
     <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="Demo Site...">
@@ -27,9 +28,9 @@
             <p class="date"><span>2013.09.20</span></p>
             <h2><a href="/articles/Hello_World/">Hello World!</a></h2>
           </header>
-          <section class="content"><p>中秋連假稍微有點閒就來把一些未完成的項目解決，其中一個就是「Github blog」，
-找了一些 framework 用來產生靜態站似乎又太肥，最後看到這套 <strong>wintersmith</strong>，
-純粹用 nodejs 來產生網站，配合線上看結果再輸出，還不錯!<br>
+          <section class="content"><p>中秋連假稍微有點閒就來把一些未完成的項目解決，其中一個就是「<a href="https://github.com/" title="Geek的社群網站">Github</a> blog」，
+找了一些 <code>framework</code> 用來產生靜態站似乎又太肥，最後看到這套 <a href="http://wintersmith.io/"><strong>wintersmith</strong></a>，
+純粹用 <a href="http://nodejs.org/">Node.<span class="caps">JS</span></a> 來產生網站，配合線上看結果再輸出，還不錯!<br>
             <p class="more"><a href="/articles/Hello_World/">(繼續閱讀)</a></p>
           </section>
         </article>
