--- a/archive.html
+++ b/archive.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
     <title>隨手筆記
     </title>
     <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="Demo Site...">
