change bio, add disqus

--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
     <meta http-equiv="expires" content="0">
     <title>隨手筆記
     </title>
-    <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="Demo Site...">
+    <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種OpenSource吧！ ：）">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="/css/main.css">
   </head>
@@ -17,7 +17,7 @@
       <div class="content-wrap">
         <div class="logo">
           <h1><a href="http://log.mxp.tw">隨手筆記</a></h1>
-          <p class="description">Demo Site...</p>
+          <p class="description">知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種OpenSource吧！ ：）</p>
         </div>
       </div>
     </header>
