--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh_TW" manifest="cache.manifest">
+<html lang="zh_TW">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,16 +8,17 @@
     <meta http-equiv="expires" content="0">
     <title>隨手筆記
     </title>
-    <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種OpenSource吧！ ：）">
+    <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種 OpenSource 吧！ ：）">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </head>
   <body>
     <header class="header">
       <div class="content-wrap">
         <div class="logo">
           <h1><a href="http://log.mxp.tw">隨手筆記</a></h1>
-          <p class="description">知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種OpenSource吧！ ：）</p>
+          <p class="description">知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種 OpenSource 吧！ ：）</p>
         </div>
       </div>
     </header>
@@ -46,5 +47,6 @@
         </section>
       </div>
     </footer>
+    <script>$(document).ready(function(){ $('a').click(function(){ $(this).attr("href",$(this).attr("href")+'?t='+Date.now());}); });</script>
   </body>
 </html>
