add fav ico, add post 使用 Wintersmith 建置 Github Blog

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>2013.09.21</span></p>
+            <h2><a href="/articles/Build_Github_Blog/">使用 Wintersmith 建置 Github Blog</a></h2>
+          </header>
+          <section class="content"><h4>前言</h4>
+<blockquote>
+<p>不是每個人都喜歡這麼喜歡「自訂」，甚麼都要自己來。但有一點是我特別在意的就是「資料」與「環境」。
+Blog&nbsp;環境分成 </p>
+<ol>
+<li>自己架設</li>
+<li><a href="http://zh.wikipedia.org/wiki/%E9%83%A8%E8%90%BD%E6%A0%BC%E6%9C%8D%E5%8A%A1%E6%8F%90%E4%BE%9B%E5%95%86" title="Wiki: 部落格服務提供商 (英文：Blog Service Provider，縮寫BSP)的作用是為申請者提供寫blog的空間與相應的技術支援，大大簡化blog的建立過程，推動大眾化發展。部落格服務提供商分為「收費部落格託管商」、「免費部落格託管商」及二者兼營的部落格託管商。"><span class="caps">BSP</span></a>&nbsp;服務</li>
+</ol>
+</blockquote>
+<p>
+            <p class="more"><a href="/articles/Build_Github_Blog/">(繼續閱讀)</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>2013.09.20</span></p>
             <h2><a href="/articles/Hello_World/">Hello World!</a></h2>
           </header>
