--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>2013.09.22</span></p>
+            <h2><a href="/articles/TRA_Ticket_Helper/">專案-台鐵訂票小幫手</a></h2>
+          </header>
+          <section class="content"><h4>前言</h4>
+<blockquote>
+<p>主題是團隊合作的開始，期望值的環境是：「幾人小組」、「協同開發」、「版本控制」、「分工合作」，&nbsp;台鐵這個主題是研究室同學想的，只因為他常常半夜再幫他或是他女友搶火車票，很賭爛<span class="caps">XD</span></p>
+</blockquote>
+<p>
+            <p class="more"><a href="/articles/TRA_Ticket_Helper/">(繼續閱讀)</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>2013.09.21</span></p>
             <h2><a href="/articles/Build_Github_Blog/">使用 Wintersmith 建置 Github Blog</a></h2>
           </header>
@@ -66,5 +79,6 @@ Blog&nbsp;環境分成 </p>
       </div>
     </footer>
     <script>$(document).ready(function(){ $('a').click(function(){ $(this).attr("href",$(this).attr("href")+'?t='+Date.now());}); });</script>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-44220076-1', 'mxp.tw');ga('send', 'pageview');</script>
   </body>
 </html>
