--- a/archive.html
+++ b/archive.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="expires" content="0">
+    <meta name="google-site-verification" content="B2QlHLtpqHzj4jWSzkirKvlEC1zFYxCezo7h721y600">
     <title>隨手筆記
     </title>
     <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種 OpenSource 吧！ ：）">
