add post 演算法作業, fix typo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
         </article>
         <article class="article intro">
           <header>
+            <p class="date"><span>2013.09.22</span></p>
+            <h2><a href="/articles/Advanced_Algorithm_Home_Work/">高等演算法-第三週作業</a></h2>
+          </header>
+          <section class="content"><h4>前言</h4>
+<blockquote>
+<p>從演算法到高等演算法，再次學習的感受又不一樣了！ 
+<del>難怪有好課值得一修再修的道理<span class="caps">XD</span></del></p>
+</blockquote>
+<p>
+            <p class="more"><a href="/articles/Advanced_Algorithm_Home_Work/">(繼續閱讀)</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>2013.09.21</span></p>
             <h2><a href="/articles/Build_Github_Blog/">使用 Wintersmith 建置 Github Blog</a></h2>
           </header>
