--- a/archive.html
+++ b/archive.html
@@ -17,8 +17,12 @@
     <link rel="alternate" href="http://log.mxp.tw/feed.xml" type="application/rss+xml" title="知識得之於人，所以也將自己的筆記放上網希望能有點貢獻，這也是種 OpenSource 吧！ ：）">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
     <link rel="stylesheet" href="/css/main.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript">
+    <link rel="stylesheet" href="/js/sidr/stylesheets/jquery.sidr.light.css">
+    <script src="/js/jquery-1.10.2.min.js"></script>
+    <script src="/js/underscore-min.js"></script>
+    <script src="/js/sidr/jquery.sidr.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script>
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-44220076-2']);
       _gaq.push(['_setDomainName', 'mxp.tw']);
@@ -31,6 +35,7 @@
     </script>
   </head>
   <body>
+    <div id="sidebar"></div>
     <header class="header">
       <div class="content-wrap">
         <div class="logo">
@@ -62,6 +67,5 @@
         </section>
       </div>
     </footer>
-    <script>$(document).ready(function(){ $('a').click(function(){ $(this).attr("href",$(this).attr("href")+'?t='+Date.now());}); });</script>
   </body>
 </html>
