add post HTML 樣板引擎 - Jade

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>2013.09.24</span></p>
+            <h2><a href="/articles/Learning_Jade_Template_Engine/">HTML 樣板引擎 - Jade</a></h2>
+          </header>
+          <section class="content"><h4>前言</h4>
+<blockquote>
+<p>第一次接觸這語言是在實做 NodeJS + ExpressJS 碰到的，App 中預設的樣版引擎模組，
+當時沒覺得甚麼，一直到開始想改這 Blog&nbsp;的模板時就再次相遇。</p>
+</blockquote>
+<p>
+            <p class="more"><a href="/articles/Learning_Jade_Template_Engine/">(繼續閱讀)</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>2013.09.23</span></p>
             <h2><a href="/articles/Advanced_Algorithm_Home_Work/">高等演算法-第三週作業</a></h2>
           </header>
