add post 使用 Bitnami 服務安裝 Gitlab

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
       <div class="content-wrap">
         <article class="article intro">
           <header>
+            <p class="date"><span>2013.09.28</span></p>
+            <h2><a href="/articles/Build_Gitlab_With_Bitnami/">使用 Bitnami 服務安裝 Gitlab</a></h2>
+          </header>
+          <section class="content"><h4>前言</h4>
+<blockquote>
+<p>使用 <a href="https://github.com/" title="Geek的社群網路">Github</a> 的感覺很好，但是如果不付費開啟私人服務，所有的 <code>code</code> 就會是公開的，這樣實在讓人很害羞、很不好意思！(誤)</p>
+</blockquote>
+<p>
+            <p class="more"><a href="/articles/Build_Gitlab_With_Bitnami/">(繼續閱讀)</a></p>
+          </section>
+        </article>
+        <article class="article intro">
+          <header>
             <p class="date"><span>2013.09.24</span></p>
             <h2><a href="/articles/Learning_Jade_Template_Engine/">HTML 樣板引擎 - Jade</a></h2>
           </header>
